--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,8 @@ Jinja2==3.1.6
 MarkupSafe==3.0.3
 python-dotenv==1.2.1
 Werkzeug==3.1.5
+flask-sqlalchemy==3.1.1
+flask-migrate==4.1.0
+psycopg2-binary==2.9.11
+flask-bcrypt==1.0.1
+flask-login==0.6.3
