--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
-version: '3.8'
-
 services:
   db:
-    image: postgres:15
+    image: postgres:17
     environment:
       POSTGRES_DB: cleanmatch
       POSTGRES_USER: cleanmatch_user
@@ -13,25 +11,39 @@ services:
       - postgres_data:/var/lib/postgresql/data
     restart: always
 
-  backend:
-    build: ./backend
-    ports:
-      - "5000:5000"
-    environment:
-      DATABASE_URL: postgresql://cleanmatch_user:securepassword123@db:5432/cleanmatch
-      JWT_SECRET_KEY: your-super-secret-jwt-key-change-this
-      FLASK_ENV: development
-    depends_on:
-      - db
-    restart: always
+  pgadmin:
+      image: dpage/pgadmin4
+      environment:
+        PGADMIN_DEFAULT_EMAIL: admin@admin.com
+        PGADMIN_DEFAULT_PASSWORD: adminpassword
+      ports:
+        - "5050:80"
+      restart: always
+      depends_on:
+        - db
+      volumes:
+        - pgadmin_data:/var/lib/pgadmin
+        
+  # backend:
+  #   build: ./backend
+  #   ports:
+  #     - "5000:5000"
+  #   environment:
+  #     DATABASE_URL: postgresql://cleanmatch_user:securepassword123@db:5432/cleanmatch
+  #     JWT_SECRET_KEY: your-super-secret-jwt-key-change-this
+  #     FLASK_ENV: development
+  #   depends_on:
+  #     - db
+  #   restart: always
 
-  frontend:
-    build: ./frontend
-    ports:
-      - "80:3000"
-    depends_on:
-      - backend
-    restart: always
+  # frontend:
+  #   build: ./frontend
+  #   ports:
+  #     - "80:3000"
+  #   depends_on:
+  #     - backend
+  #   restart: always
 
 volumes:
   postgres_data:
+  pgadmin_data:
