--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,24 @@
+alembic==1.18.3
 blinker==1.9.0
 click==8.3.1
 Flask==3.1.2
+Flask-Bcrypt==1.0.1
 flask-cors==6.0.2
+Flask-Login==0.6.3
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+iniconfig==2.3.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
+Mako==1.3.10
 MarkupSafe==3.0.3
-python-dotenv==1.2.1
-Werkzeug==3.1.5
+packaging==26.0
+pluggy==1.6.0
+psycopg2-binary==2.9.11
+PyJWT==2.11.0
 pytest==8.1.1
 pytest-flask==1.3.0
-flask-sqlalchemy==3.1.1
-flask-migrate==4.1.0
-psycopg2-binary==2.9.11
-flask-bcrypt==1.0.1
-flask-login==0.6.3
+python-dotenv==1.2.1
+SQLAlchemy==2.0.46
+typing_extensions==4.15.0
+Werkzeug==3.1.5
